# ComponentExecutionEngine

./: ARM11_OPROS.txt  ARM9_OPROS.txt  CMakeLists.txt  CMakeLists.txt.ros  Changes.txt  CheckList.txt  LGPLv3.txt  README.md  ReadMe  ReleaseList(kor).txt  ReleaseVersion.txt
cdl/: Component.cpp  DataPort.cpp  EventPort.cpp  InputDataPortInterface.cpp  InputEventPortInterface.cpp  OPRoSUtility.cpp  OSGuard.cpp  OSGuard.h  OSMutex_Port.cpp  OutputDataPortInterface.cpp  OutputEventPortInterface.cpp  PortInterface.cpp  ProvidedServicePort.cpp  RequiredServicePort.cpp  ServicePort.cpp  ServicePortInterface.cpp  SymbolServicePortProvider.cpp
cdl/CVS/: Entries  Repository
example/helloworld/: CMakeLists.txt  HelloMaker.xml  MessagePrinter.xml  UserDataType.xml
example/helloworld/HelloMaker/: CMakeLists.txt
example/helloworld/HelloMaker/src/: HelloMaker.cpp  HelloMaker.h
generater/: '  GenerateProfiles2011.xsl  RomeoService.xml  TaskRomeoControl.xml  genall2011.bat  generate2011.bat  jd.bat  libconfig.cfg  opros_service_type.xml
generater/CVS/: Entries  Repository
generater/profiles/: CameraService.xml  FaceFollower.xml  LaserScanApi.xml  NavigationService.xml  SpeechService.xml  TurtleControlService.xml
include/: OPRoSTypes.h  ReturnType.h  ServiceUtils.h  opros_smart_ptr.h
include/archive/: opros_archive.h  opros_iarchive.h  opros_iarchive_fwd.h  opros_iarchive_stl.h  opros_oarchive.h  opros_oarchive_fwd.h  opros_oarchive_stl.h  opros_type_info.h
src/: ArchiveFactory.cpp  ArchiveManager.cpp  ArchiveManager.h  BinaryArchiveFactory.cpp  BinaryArchiveFactory.h  CTrace.h  DataPortConnector.h  DataPortConnectorImpl.cpp  DataPortConnectorImpl.h  DataPortLink.cpp  DataPortLink.h  EngineInterface.h  Event.cpp  EventPortConnector.h  EventPortConnectorImpl.cpp  EventPortConnectorImpl.h  EventPortLink.cpp  EventPortLink.h  LifecycleInterface.cpp  Method.cpp  OPRoSUtility.cpp  Port.cpp  PropertyInterface.cpp  ServicePortConnectorImpl.cpp  ServicePortConnectorImpl.h  StringArchiveFactory.cpp  StringArchiveFactory.h  SymbolServicePortProvider.h
src/CVS/: Entries  Repository
src/archive/: opros_archive_common.cpp  opros_iarchive.cpp  (+5 more)
win/: OCEWin.cpp  stdafx.cpp
(+387 files in other folders)
